# PhysiCell

./: Makefile  default.nix  particle.bib  shell.nix
haskell/PhysiCell/: PhysiCell.cabal
haskell/PhysiCell/app/: GbmStromaGrowth.hs  PhysiCell.hs  heterogeneity.h
haskell/PhysiCell/src/: GBM_stroma_growth.cpp  GBM_stroma_growth.h  cancer_biorobots.h  heterogeneity.cpp  heterogeneity.h
haskell/PhysiCell/src/Numeric/: GbmStromaGrowth.hs  Main.h  PhysiCell.hs  heterogeneity.h  test.h
matlab/: test.m
sample_projects/GBM_stroma_growth/: Makefile  main-GBM_stroma_growth.cpp
sample_projects/GBM_stroma_growth/custom_modules/: GBM_stroma_growth.cpp  GBM_stroma_growth.h
sample_projects/heterogeneity/custom_modules/: heterogeneity.h
